# AI-agent-travel-assistant

./: .env.example  .gitignore
src/travel_agent/: api.py  app.py  crew.py  main.py
src/travel_agent/config/: agents.yaml  tasks.yaml
src/travel_agent/tools/: custom_tool.py
travel/: README.md  pyproject.toml
travel/src/travel_agent/: api.py  crew.py
travel/src/travel_agent/config/: agents.yaml  tasks.yaml
