[project]
name = "travel_agent"
version = "0.1.0"
description = "travel-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
travel_agent = "travel_agent.main:run"
run_crew = "travel_agent.main:run"
train = "travel_agent.main:train"
replay = "travel_agent.main:replay"
test = "travel_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
